[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ah_google"
version = "1.0.0"
description = "Google search and read web page"
requires-python = ">=3.7"

dependencies = [ "requests", "bs4", "trafilatura" ]


[project.optional-dependencies]
dev = ["pytest"]
